--- a/_/css/site.css
+++ b/_/css/site.css
@@ -1,3 +1,22 @@
+abbr
+{
+        border-bottom: 1px dotted #666;
+        cursor: help;
+}
+
+.tooltip
+{
+    position:absolute;
+    background-color:yellow;
+    border: 1px solid #aaaaca;
+    font-size: smaller;
+    padding:4px;
+    width: 160px;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1); 
+}
+
 @font-face {
     font-family: Roboto;
     font-style: normal;
