Fine-tuned footnote colours

--- a/_/css/site.css
+++ b/_/css/site.css
@@ -7,8 +7,8 @@ abbr
 .tooltip
 {
     position:absolute;
-    background-color:yellow;
-    border: 1px solid #aaaaca;
+    background-color: #fafafa;
+    border: 1px solid #666;
     font-size: smaller;
     padding:4px;
     width: 160px;
