--- a/_/css/site.css
+++ b/_/css/site.css
@@ -8,6 +8,7 @@ abbr
 {
     position:absolute;
     background-color: #fafafa;
+    opacity: 1;
     border: 1px solid #666;
     font-size: smaller;
     padding:4px;
